<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ly3ydy_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ly123_title"
            android:textColor="#ffffffff"
            android:textSize="49sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ly3ydy"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="20dp"
        android:gravity="center|top"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ly3_res1"
            android:textColor="#ffffffff"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ly3_res2"
            android:textColor="#ffffffff"
            android:textSize="25sp"
            android:padding="10dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">
            <Button
                android:id="@+id/next"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ly_bt"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/arc_square"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>