<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--   app:srlPrimaryColor="@color/white" 设置背景刷新区域的背景颜色-->
    <!--   app:srlAccentColor="@android:color/white" 设置刷新区域的Text文本颜色-->
    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingClass">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lymain_top_bg"
                android:gravity="center|left"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <y.yj.lib_weight.PressImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/lymain_ring"
                    android:contentDescription="@string/todo" />

                <include
                    layout="@layout/search"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <y.yj.lib_weight.PressImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/lymain_add"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="always">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:background="@drawable/lymain_top_bg"
                        android:baselineAligned="false"
                        tools:ignore="NestedWeights">

                        <y.yj.lib_weight.PressLinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/lymain_top1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lymain_top_item1"
                                android:textColor="@color/white"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                        </y.yj.lib_weight.PressLinearLayout>

                        <y.yj.lib_weight.PressLinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/lymain_top2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lymain_top_item2"
                                android:textColor="@color/white"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                        </y.yj.lib_weight.PressLinearLayout>

                        <y.yj.lib_weight.PressLinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/lymain_top3" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lymain_top_item3"
                                android:textColor="@color/white"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                        </y.yj.lib_weight.PressLinearLayout>

                        <y.yj.lib_weight.PressLinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/lymain_top4" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lymain_top_item4"
                                android:textColor="@color/white"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                        </y.yj.lib_weight.PressLinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="always"
                            tools:listitem="@layout/apply"
                            tools:itemCount="3"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

                        <include
                            android:id="@+id/notice"
                            layout="@layout/notice" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@color/grey" />

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>


</LinearLayout>